<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/movie_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ui.movies.MovieDetailsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/img_backdrop"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:fitsSystemWindows="true"
            android:scaleType="centerCrop"
            app:layout_collapseMode="parallax"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/poster_aquaman"
            android:contentDescription="@string/backdrop_desc"/>

        <ImageView
            android:id="@+id/img_poster"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="18dp"
            android:layout_marginTop="200dp"
            android:scaleType="fitStart"
            android:adjustViewBounds="true"
            tools:src="@drawable/poster_aquaman"
            android:contentDescription="@string/poster_desc"/>

        <TextView
            android:id="@+id/tv_movie_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/movieTitle"
            android:textColor="#de000000"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@id/img_backdrop"
            app:layout_constraintStart_toEndOf="@id/img_poster"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp">
        </TextView>

        <TextView
            android:id="@+id/lbl_release_year"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/lbl_releaseDate"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@id/tv_movie_title"
            app:layout_constraintStart_toEndOf="@id/img_poster"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="6dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp">
        </TextView>

        <TextView
            android:id="@+id/tv_release_year"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/release_date"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@id/lbl_release_year"
            app:layout_constraintStart_toEndOf="@id/img_poster"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp">
        </TextView>

        <TextView
            android:id="@+id/lbl_budget"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/lbl_budget"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@id/tv_release_year"
            app:layout_constraintStart_toEndOf="@id/img_poster"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp">
        </TextView>

        <TextView
            android:id="@+id/tv_budget"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/budget"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@id/lbl_budget"
            app:layout_constraintStart_toEndOf="@id/img_poster"
            android:layout_marginTop="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp">
        </TextView>

        <TextView
            android:id="@+id/lbl_revenue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/lbl_revenue"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@id/tv_release_year"
            app:layout_constraintStart_toEndOf="@id/lbl_budget"
            android:layout_marginTop="8dp"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="16dp">
        </TextView>

        <TextView
            android:id="@+id/tv_revenue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/revenue"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@id/lbl_budget"
            app:layout_constraintStart_toStartOf="@id/lbl_revenue"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="16dp">
        </TextView>

        <TextView
            android:id="@+id/lbl_synopsis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_revenue"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="20dp"
            android:layout_marginStart="16dp"
            android:text="@string/lbl_Synopsis">
        </TextView>

        <TextView
            android:id="@+id/tv_synopsis"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/lbl_synopsis"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="6dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:textSize="14sp"
            android:text="@string/large_text" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/ic_add_favorite"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/img_poster"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="220dp"
            android:layout_marginStart="160dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/fab"
            android:theme="@style/FormButton"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Button"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>