<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/movies">

    <fragment
        android:id="@+id/movies"
        android:name="com.example.jpsubmission1.view.ui.movies.MoviesFragment"
        android:label="@string/title_Movies"
        tools:layout="@layout/fragment_movies" >
        <action
            android:id="@+id/action_navigation_home_to_movieDetailsFragment"
            app:destination="@id/movieDetailsFragment"/>
    </fragment>

    <fragment
        android:id="@+id/favorites"
        android:name="com.example.jpsubmission1.view.ui.favorites.FavoritesFragment"
        android:label="@string/title_Favorites"
        tools:layout="@layout/fragment_favorites" >
        <action
            android:id="@+id/action_favorites_to_favoriteDetailFragment"
            app:destination="@id/favoriteDetailFragment"/>
    </fragment>

    <fragment
        android:id="@+id/tvShows"
        android:name="com.example.jpsubmission1.view.ui.tvshows.TvShowsFragment"
        android:label="@string/title_TvShows"
        tools:layout="@layout/fragment_tvshows" >
        <action
            android:id="@+id/action_tvShows_to_tvShowsDetailsFragment"
            app:destination="@id/tvShowsDetailsFragment"/>
    </fragment>

    <fragment
        android:id="@+id/movieDetailsFragment"
        android:name="com.example.jpsubmission1.view.ui.movies.MovieDetailsFragment"
        android:label="fragment_movie_details"
        tools:layout="@layout/fragment_movie_details" >
        <argument
            android:name="movies"
            app:argType="com.example.jpsubmission1.data.Movies" />
    </fragment>

    <fragment
        android:id="@+id/tvShowsDetailsFragment"
        android:name="com.example.jpsubmission1.view.ui.tvshows.TvShowsDetailsFragment"
        android:label="fragment_tv_shows_details"
        tools:layout="@layout/fragment_tv_shows_details" >
        <argument
            android:name="tvShows"
            app:argType="com.example.jpsubmission1.data.TvShows" />
    </fragment>

    <fragment
        android:id="@+id/favoriteDetailFragment"
        android:name="com.example.jpsubmission1.view.ui.favorites.FavoriteDetailFragment"
        android:label="FavoriteDetailFragment" >
        <argument
            android:name="favmovies"
            app:argType="com.example.jpsubmission1.data.FavoritesMovie" />
    </fragment>
</navigation>